update file name img

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <h1>Invoice</h1>
       <div class="branding">
         <div class="company-name">DI-Rentals</div>
-       <img id="LogoImage" src="logo.png" alt="Company Logo" class="logo" />
+       <img id="LogoImage" src="Logo.png" alt="Company Logo" class="logo" />
       </div>
     </div>
 
